--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "homepage": "https://github.com/yanni4night/bigpipe.js",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-uglify": "^0.9.2",
     "load-grunt-tasks": "^3.3.0",
     "time-grunt": "^1.2.2"
   }
